--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  #This package provides BLE support.
+  flutter_blue: ^0.4.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
