--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: wobble_board
-description: Wobble board app.
+name: animation_first_effort
+description: A new Flutter project.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -15,13 +15,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flare_flutter: ^1.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
-  #This package provides BLE support.
-  flutter_blue: ^0.4.2
 
 dev_dependencies:
   flutter_test:
@@ -39,6 +37,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+  - animations/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
