--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ unlinked_spec.ds
 **/android/**/GeneratedPluginRegistrant.java
 **/android/key.properties
 *.jks
+**/android/app/google-services.json
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
