--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   #accelerometer events
   sensors: ^0.4.0
 
+  #plugin to keep the screen on
+  screen: ^0.0.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -76,4 +79,4 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
   assets:
-    - assets/exercises.json
+    - assets/
