Sounds and dialog for the Exercise page added.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
 
   percent_indicator: ^1.0.14
 
+  audioplayers: ^0.10.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -89,3 +91,4 @@ flutter:
     - assets/
     - assets/images/
     - assets/images/exercises/
+    - assets/sounds/
