--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  # Provides unit tests support.
+#  test: ^1.6.0
+
   # A Flutter plugin to use the Cloud Firestore API.
   cloud_firestore: ^0.9.5+2
 
@@ -42,8 +45,9 @@ dependencies:
   audioplayers: ^0.10.0
 
 dev_dependencies:
-  flutter_test:
+  flutter_driver:
     sdk: flutter
+  test: any
 
 
 # For information on the generic Dart part of this file, see the
